--- a/rubik.css
+++ b/rubik.css
@@ -4,7 +4,6 @@ body{
   background-repeat: repeat-y;
   background-position: right top;
   padding: 15px 95px 15px 15px;
-  background-image: url("hatterkocka.png");
   /* 4.feladat */
   background-image: url('hatterkocka.png');
   /* 7.feladat */
@@ -12,7 +11,8 @@ body{
 }
 
 #cimkep{
-  float:left;  
+  float:left; 
+  height: 150px; 
 }
 
 h1{
